# ProgrammingSoftwareSystems2HWs

./: .gitignore  README.md  ~$README.md
PSS2HW0/Maxim_Latypov/: MyCalculator.java  MyNumberCreator.java
PSS2HW0/do_not_change/: Calculator.java  NumberCreator.java
PSS2HW1/: CMakeLists.txt  README.md  in.txt  main.cpp  out.txt
PSS2HW2/: AccessLevel.cpp  AccessLevel.h  CMakeLists.txt  README.md  University.cpp  University.h  main.cpp
PSS2HW2/Room/Cpp files/: Cabinet.cpp  ConferenceRoom.cpp
PSS2HW2/Room/Header files/: Cabinet.h  DirectorCabinet.h
PSS2HW2/User/: User.h
PSS2HW2/User/Cpp files/: Admin.cpp  Director.cpp  DroppedStudent.cpp  LabEmployee.cpp  Professor.cpp  Student.cpp
PSS2HW2/User/Header files/: Admin.h  Director.h  DroppedStudent.h  LabEmployee.h  Professor.h  Student.h
PSS2HW3/: AccessLevel.cpp  AccessLevel.h  CMakeLists.txt  README.md  University.cpp  University.h  main.cpp
PSS2HW3/Room/: Room.cpp  Room.h
PSS2HW3/Room/Cpp files/: ClassRoom.cpp  DirectorCabinet.cpp  LectureRoom.cpp
PSS2HW3/Room/Header files/: Cabinet.h  ClassRoom.h  ConferenceRoom.h  DirectorCabinet.h  LectureRoom.h
PSS2HW3/User/: User.cpp  User.h
PSS2HW3/User/Cpp files/: Admin.cpp  Director.cpp  Guest.cpp  LabEmployee.cpp  Professor.cpp  Student.cpp
PSS2HW3/User/Header files/: Admin.h  Director.h  Guest.h  LabEmployee.h  Professor.h  Student.h
PSS2HW4/: .gitignore  CMakeLists.txt  Car.h  DataBase.cpp  DataBase.h  Driver.cpp  Driver.h  DriverGateWay.cpp  DriverGateWay.h  PSS2HW4.pro  Passenger.cpp  Passenger.h  PassengerGateWay.cpp  PassengerGateWay.h  README.md  Status.h  System.cpp  System.h  main.cpp
PSS2HW4/Car/: BusinessCar.cpp  BusinessCar.h  Car.cpp  Car.h  ComfortCar.cpp  ComfortCar.h  ComfortPlusCar.cpp  ComfortPlusCar.h  EconomyCar.cpp  EconomyCar.h
PSS2HW5/: .gitignore  CMakeLists.txt  DataBase.h  Driver.cpp  Driver.h  DriverGateWay.cpp  DriverGateWay.h  Passenger.h  PassengerGateWay.h  Status.cpp  Status.h  System.cpp  System.h  main.cpp
PSS2HW5/Admin/: Admin.cpp  Admin.h  AdminGateWay.cpp  AdminGateWay.h
PSS2HW5/Car/: BusinessCar.cpp  BusinessCar.h  Car.cpp  Car.h  ComfortCar.cpp  ComfortCar.h  ComfortPlusCar.cpp  ComfortPlusCar.h  EconomyCar.cpp  EconomyCar.h
PSS2HW5/Driver/: Driver.cpp  Driver.h  DriverGateWay.cpp  DriverGateWay.h
PSS2HW5/Passenger/: Passenger.cpp  Passenger.h  PassengerGateWay.h
