cmake_minimum_required(VERSION 3.17)
project(PSS2HW2)

set(CMAKE_CXX_STANDARD 17)

add_executable(PSS2HW2 "main.cpp" "User/Cpp files/Student.cpp" "User/Header files/Student.h" "User/User.cpp" "User/User.h" "Room/Room.cpp" "Room/Room.h" "Room/Cpp files/ClassRoom.cpp" "Room/Header files/ClassRoom.h" "Room/Cpp files/LectureRoom.cpp" "Room/Header files/LectureRoom.h" "AccessLevel.cpp" "AccessLevel.h" "Room/Cpp files/ConferenceRoom.cpp" "Room/Header files/ConferenceRoom.h" "Room/Cpp files/Cabinet.cpp" "Room/Header files/Cabinet.h" "Room/Cpp files/DirectorCabinet.cpp" "Room/Header files/DirectorCabinet.h" "User/Cpp files/Professor.cpp" "User/Header files/Professor.h" "User/Cpp files/DroppedStudent.cpp" "User/Header files/DroppedStudent.h" "User/Cpp files/LabEmployee.cpp" "User/Header files/LabEmployee.h" "User/Cpp files/Director.cpp" "User/Header files/Director.h" "User/Cpp files/Admin.cpp" "User/Header files/Admin.h" University.cpp University.h)